Made content user editable

--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css" />
-
 </head>
 
 <body>
-
     <div id="winter" class="parallax">
-        <div class="textBox">
+        <div class="textBox" id = "edit1" contenteditable="true">
             <p>
                 Shivering, frozen mid the frosty snow in biting, stinging winds; running to and fro to stamp one's icy feet, teeth chattering in the bitter chill.
                 <br />
@@ -25,7 +23,7 @@
     </div>
 
     <div id="spring" class="parallax">
-        <div class="textBox">
+        <div class="textBox" id = "edit2" contenteditable="true">
             <p>
                 Springtime is upon us. The birds celebrate her return with festive song, and murmuring streams are softly caressed by the breezes. Thunderstorms, those heralds of Spring, roar, casting their dark mantle over heaven, Then they die away to silence, and
                 the birds take up their charming songs once more.
@@ -40,7 +38,7 @@
     </div>
 
     <div id="summer" class="parallax">
-        <div class="textBox">
+        <div class="textBox" id = "edit3" contenteditable="true">
             <p>
                 Beneath the blazing sun's relentless heat men and flocks are sweltering, pines are scorched. We hear the cuckoo's voice; then sweet songs of the turtle dove and finch are heard. Soft breezes stir the air….but threatening north wind sweeps them suddenly
                 aside. The shepherd trembles, fearful of violent storm and what may lie ahead.
@@ -55,7 +53,7 @@
     </div>
 
     <div id="autumn" class="parallax">
-        <div class="textBox">
+        <div class="textBox" id = "edit4" contenteditable="true">
             <p>
                 The peasant celebrates with song and dance the harvest safely gathered in. The cup of Bacchus flows freely, and many find their relief in deep slumber.
                 <br />
@@ -68,7 +66,5 @@
         </div>
     </div>
 
-
 </body>
-
 </html>
